<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_to_costmap</name>
  <version>0.1.0</version>
  <description>Convert 3D pointcloud to 2D costmap</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>crp_sdk_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
